# incident-intelligence-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: demo_incidents.json
docs/superpowers/plans/: 2026-04-28-incident-intelligence-agent.md
docs/superpowers/specs/: 2026-04-28-incident-intelligence-agent-design.md
src/incident_intel/: config.py  models.py
src/incident_intel/cli/: main.py
src/incident_intel/core/: formatter.py  ingestor.py  rca_generator.py  similarity_search.py
src/incident_intel/mcp/: server.py
tests/: conftest.py  test_formatter.py  test_ingestor.py  test_rca_generator.py  test_similarity_search.py
